# pico2

IMD_test/: CMakeLists.txt  IMD_test.c  aux_test.c  pico_hal.h  pico_hw.c
MICS_test/: CC_hw.c  CC_lib.h  CMakeLists.txt  General.h  MICS_RSSI.c  MICS_comm.c  MICS_reg_man.c  MICS_test.c  MICS_util.c  Pico_hw.c  mics_hw.h  mics_lib.h  pico_lib.h
PAC194x_5x_lib_v1_0/: PAC194x_5x.h  Release_notes.txt
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/: MyConfig.mc3  PAC194x_5x.h  main.c  mcc-bug-warning.txt  platform-config.txt
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/mcc_generated_files/: mcc.c  mcc.h
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/mcc_generated_files/drivers/: uart.c  uart.h
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/mcc_generated_files/include/: pin_manager.h  twi0_master.h  usart1.h
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/mcc_generated_files/src/: pin_manager.c
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
PAC194x_5x_lib_v1_0/application_examples/AVR8_example_app.X/nbproject/private/: configurations.xml  private.xml
PAC194x_5x_lib_v1_0/application_examples/PIC24_example_app.X/: MyConfig.mc3  PAC194x_5x.c  PAC194x_5x.h  main.c  platform-config.txt
PAC194x_5x_lib_v1_0/application_examples/PIC24_example_app.X/mcc_generated_files/: clock.c  clock.h  i2c1.c  i2c1.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  system.c  system.h  traps.c  traps.h  uart1.c  uart1.h
PAC194x_5x_lib_v1_0/application_examples/PIC24_example_app.X/mcc_generated_files/drivers/: uart.h
PAC194x_5x_lib_v1_0/application_examples/PIC24_example_app.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
PAC194x_5x_lib_v1_0/application_examples/PIC24_example_app.X/nbproject/private/: configurations.xml  private.xml
ProjectName/: CMakeLists.txt  ProjectName.c
UART_rs485_transceiver/: CMakeLists.txt  UART_rs485_transceiver.c  general_inc.h
log_caricabatterie/: CMakeLists.txt  log_caricabatterie.c
prove/prove/: main  main.c  prove.c  prove.depend  prove.layout
prove/prove2/: buffer.h  buffers.c  main.c  prove2.cbp  prove2.depend  prove2.layout
prove/prove2/doxygen/: doxyfile
prove/prove3/: main.c  prove3.cbp  prove3.depend  prove3.layout
prove/prove_myprintf/: main.c  prove_myprintf.cbp
prove_seriale/: CMakeLists.txt  prove_seriale.c
stazione_meteo/: CMakeLists.txt  aht20_lib.c  aht20_lib.h  stazione_meteo.c
